Fix Hero-BG animation glitch on Firefox

--- a/components/page-specific/landing/bg.module.css
+++ b/components/page-specific/landing/bg.module.css
@@ -1,21 +1,17 @@
 .animate {
-    --start-x:0px;
-    --start-y:0px;
-    --end-x:256px;
-    --end-y:256px;
-    animation-name: animation;
+    animation-name: hero-bg-animation;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
 
     image-rendering: pixelated;
 }
 
-@keyframes animation {
+@keyframes hero-bg-animation {
     0% {
         background-position: var(--start-x) var(--start-y);
     }
-
+  
     100% {
         background-position: var(--end-x) var(--end-y);
     }
-}
+  }
